--- a/indext.html
+++ b/indext.html
@@ -4,8 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>my-first-website</title>
+  <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
+  <div>
+    <h3>my first website</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum fugiat cupiditate, atque ipsa praesentium blanditiis dolorum nostrum impedit quia autem nemo error repudiandae consequuntur fuga odio, assumenda aperiam. Enim, ad.</p>
+  </div>
   
 </body>
 </html>
